--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,22 @@
 <div class="body-container">
-  <header class="header-container">
-    <div class="col-2-3 headding-txt">PRICKLES&C.O
-      <div class="menu-items">
-        <span>Home</span>
-        <span>Shop</span>
-        <span>About</span>
-        <span>FAQ</span>
-        <span>Contact</span>
+  <div class="fixed-header">
+    <header class="header-container">
+      <div class="col-2-3 headding-txt">PRICKLES&C.O
+        <div class="menu-items">
+          <span>Home</span>
+          <span>Shop</span>
+          <span>About</span>
+          <span>FAQ</span>
+          <span>Contact</span>
+        </div>
+      </div><!--
+      --><div class="col-1-3 img-container clear-fix"><!--
+        --><img class="header-img" src="./assets/images/basket.svg"/>
+        <img class="header-img" src="./assets/images/menu.svg"/>
       </div>
-    </div><!--
-     --><div class="col-1-3 img-container clear-fix"><!--
-       --><img class="header-img" src="./assets/images/basket.svg"/>
-      <img class="header-img" src="./assets/images/menu.svg"/>
-    </div>
-    <div class="call-us">Call us now! - 12345</div>
-  </header>
+      <div class="call-us">Call us now! - 12345</div>
+    </header>
+  </div>
   <div class="garden-background clear-fix">
     <div class="headding-txt"><span>EVERYTHING THAT </span> <span>GROWS IN OUR GARDEN</span></div>
     <div class="sub-txt">The paragraph is the basic unit for organising information in your writing. You use paragraphs to structure information in all of your exam and assignment essays and short answer questions. The paragraph is the basic unit for organising information in your writing.</div>
@@ -86,40 +88,51 @@
   </div>
   <div class="load-more">LOAD MORE</div>
   <div class="contact-details">
-    <div class="headding">OUR STORE</div>
-    <div class="address">
-      <span class="address-item">Address: Hello world house, 500 street</span>
-      <span class="address-item">Fransicse, ho, nggg</span>
-      <span class="address-item">Phone: 0865-4546-22</span>
-      <span class="address-item">Email: deskdd@dfrm.cvd</span>
+    <div class="contact-section clear-fix">
+      <div class="headding">OUR STORE</div>
+      <div class="address">
+        <span class="address-item">Address: Hello world house, 500 street</span>
+        <span class="address-item">Fransicse, ho, nggg</span>
+        <span class="address-item">Phone: 0865-4546-22</span>
+        <span class="address-item">Email: deskdd@dfrm.cvd</span>
+      </div>
     </div>
-    <div class="headding">OPENING HOURS</div>
-    <div class="address">
-      <span class="address-item">Mon - Fri: 7am - 10pm</span>
-      <span class="address-item">Saturday: 8am - 10pm</span>
-      <span class="address-item">Sunday: 8am - 11pm</span>
+    <div class="contact-section clear-fix">
+      <div class="headding">OPENING HOURS</div>
+      <div class="address">
+        <span class="address-item">Mon - Fri: 7am - 10pm</span>
+        <span class="address-item">Saturday: 8am - 10pm</span>
+        <span class="address-item">Sunday: 8am - 11pm</span>
+      </div>
     </div>
-    <div class="headding">HELP</div>
-    <div class="address">
-      <span class="underline address-item">Shipping and returns</span>
-      <span class="underline address-item">Privacy Policy</span>
-      <span class="underline address-item">FAQ</span>
+    <div class="contact-section clear-fix">
+      <div class="headding">HELP</div>
+      <div class="address">
+        <span class="underline address-item">Shipping and returns</span>
+        <span class="underline address-item">Privacy Policy</span>
+        <span class="underline address-item">FAQ</span>
+      </div>
     </div>
     <div class="headding">SUBSCRIBE</div>
-    <input class="input-email" placeholder="Email address"/>
-    <div class="load-more">Subscribe Now</div>
+    <div class="subscribe-input">
+      <input class="input-email" placeholder="Email address" />
+      <div class="load-more subscribe-btn">Subscribe Now</div>
+    </div>
     <div class="logo-list">
         <img class="media-logo" src="./assets/images/fb_logo.png" />
         <img class="media-logo" src="./assets/images/google_plus_logo.png" />
         <img class="media-logo" src="./assets/images/pinterest_logo.png" />
         <img class="media-logo" src="./assets/images/instagram_logo.png" />
     </div>
-    <div class="map-view">
-        <img class="width-100"src="./assets/images/map_view.png" />
+    <div class="map-view clear-fix">
+        <img class="width-100" src="./assets/images/map_view.png" />
     </div>
+    <div class="map-large">
+      <img class="width-100" src="./assets/images/map_large.png" />
   </div>
-  <div>
-    <span class="copyright">@ Pricles and Co. products </span>
+  </div>
+  <div class="text-center created-container">
+    <span class="copyright">@2023 Pricles and Co. products </span>
     <span class="copyright">created by xyz </span>
   </div>
   <div class="create-msg clear-fix"><img src="./assets/images/message.png"/></div>
