--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -288,6 +288,7 @@ $color-light: #fff;
 		.map-large {
 			display: block;
 			margin-bottom: 20px;
+			padding: 0px 10px;
 			img {
 				height: auto;
 				max-width: 100%;
